fix white coloring, default font

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <h3>Board Font</h3>
         <div class="control-group vertical">
           <select id="boardFont" class="text-input" style="max-width: 300px;">
-            <option value="'JetBrains Mono', monospace" selected>JetBrains Mono (Web)</option>
+            <option value="'JetBrains Mono', monospace">JetBrains Mono (Web)</option>
             <option value="'Roboto Mono', monospace">Roboto Mono (Web)</option>
-            <option value="'Source Code Pro', monospace">Source Code Pro (Web)</option>
+            <option value="'Source Code Pro', monospace" selected>Source Code Pro (Web)</option>
             <option value="'Space Mono', monospace">Space Mono (Web)</option>
             <option value="'OCR-A', 'OCRA', 'OCR A Std', 'Courier New', Courier, monospace">OCR-A (Aviation) ⚠️ Install font</option>
             <option value="'Courier New', Courier, monospace">Courier New</option>
