readme, build, rename some vars

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ Education</textarea>
       elementId: 'wordRotator',
       words: initialWords,
       mode: 'flip',
-      mathInterval: 3000,
-      otherInterval: 500,
+      firstWordInterval: 3000,
+      otherWordInterval: 500,
       onRotate: (index, isFinished) => {
         // For wheel mode, apply colors on rotation
         if (rotator.mode === 'wheel') {
