renaming to text-effects.js

--- a/example.html
+++ b/example.html
@@ -36,7 +36,7 @@
     </h1>
   </div>
 
-  <script src="word-rotator.js"></script>
+  <script src="text-effects.js"></script>
   <script>
     // Simple example
     const rotator = new WordRotator({
